# Flappy

./: .gitignore  CMakeLists.txt  README.md
Resources/Shaders/: Fragment.txt  Text.vs  Vertex.txt
Source/: Main.cpp
Source/Game/: Actor.cpp  Actor.h  Game.cpp  Game.h  Obstacle.cpp  Obstacle.h  ObstaclesGenerator.cpp  ObstaclesGenerator.h  Player.cpp  Player.h
Source/Utils/: ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  Texture.cpp  Texture.h
